<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/events"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="253dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="12dp">

            <TextView
                android:id="@+id/event_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="232dp"
                android:text="@string/event_id"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.031" />

            <TextView
                android:id="@+id/event_title"
                android:layout_width="202dp"
                android:layout_height="27dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="99dp" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:text="@string/description_of_event"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/date"
                tools:layout_editor_absoluteY="136dp" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:layout_below="@+id/time"
                android:layout_centerHorizontal="true"
                android:background="@color/gray"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.978" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>