<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTitleBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/event_tracking"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="33dp" />

    <ImageView
        android:id="@+id/calendarImage"
        android:layout_width="410dp"
        android:layout_height="250dp"
        android:contentDescription="@string/calendar_image"
        android:src="@drawable/calendar_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:autofillHints="Username"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_below="@+id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

</androidx.constraintlayout.widget.ConstraintLayout>